@@ -408,9 +408,6 @@
                         <source>${java_source_version}</source>
                         <target>${java_target_version}</target>
                         <encoding>${file_encoding}</encoding>
-                        <!--<compilerArgs>-->
-                        <!--<arg>-XX:MaxPermSize=512M</arg>-->
-                        <!--</compilerArgs>-->
                     </configuration>
                 </plugin>
                 <!--This plugin's configuration is used to store Eclipse m2e settings
@@ -449,7 +446,7 @@
         </pluginManagement>
     </build>
 
-   <distributionManagement>
+    <distributionManagement>
         <repository>
             <id>releases-bs</id>
             <uniqueVersion>true</uniqueVersion>
